# fastlem-web

./: .gitignore  index.html  package-lock.json  package.json
public/: template1.json  template2.json  template3.json
rust/: Cargo.toml
rust/src/: lib.rs  node.rs
scripts/: rescale_erodibility.py
src/: main.ts  style.css
src/rust/: Cargo.toml
src/rust/pkg/: package.json  rust.d.ts  rust.js  rust_bg.wasm  rust_bg.wasm.d.ts
src/rust/src/: lib.rs  preview.rs
