[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
image = "0.24"
rand = "0.8"
noise = {version = "0.8.2", features = ["images"]}
procedural-terrain = { git = "https://github.com/TadaTeruki/procedural-terrain-rs" }
getrandom = { version = "0.2", features = ["js"] }
naturalneighbor = "1.1"
kdtree = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]